<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="screen_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_bigger">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="own_app">Capstone: My Own App</string>

    <string name="msg_spotify_streamer">This button will launch my spotify app!</string>
    <string name="msg_scores_app">This button will launch my scores app!</string>
    <string name="msg_library_app">This button will launch my library app!</string>
    <string name="msg_build_bigger">This button will launch my Build it Bigger app!</string>
    <string name="msg_xyz_reader">This button will launch my reader app!</string>
    <string name="msg_own_app">This button will launch my capstone app!</string>
</resources>
