<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/screen_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/btnSpotify"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:onClick="showApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnSpotify"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:onClick="showApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btnLibrary"
        android:layout_below="@+id/btnScores"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:onClick="showApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_bigger"
        android:id="@+id/btnBigger"
        android:layout_below="@+id/btnLibrary"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:onClick="showApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/btnReader"
        android:layout_below="@+id/btnBigger"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:onClick="showApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/own_app"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnReader"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:onClick="showApp"/>
</RelativeLayout>
